--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "name": "acidburn.video",
   "version": "1.0.0",
-  "description": "Watch videos with your friends",
-  "main": "server.js",
+  "description": "Watch videos with others",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server",
+    "build": "webpack",
+    "lint": "eslint lib"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reconbot/acidburn.video.git"
   },
-  "author": "",
+  "author": "Francis Gulotta <wizard@roborooter.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/reconbot/acidburn.video/issues"
   },
   "homepage": "https://github.com/reconbot/acidburn.video#readme",
   "dependencies": {
-    "babelify": "^6.3.0",
-    "browserify-middleware": "^7.0.0",
-    "express": "^4.13.3",
+    "eslint": "^5.11.1",
+    "ipfs": "^0.33.1",
     "react": "^0.14.0",
-    "socket.io": "^1.3.7",
-    "timesync": "^0.1.0"
+    "videostream": "^3.2.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.11.1",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14"
   }
 }
