--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack",
-    "lint": "eslint lib"
+    "lint": "tslint -c tslint.json -p tsconfig.json lib/**/*.ts*",
+    "test": "tape -r ts-node/register lib/**/*-test.ts"
   },
   "repository": {
     "type": "git",
@@ -18,14 +19,24 @@
   },
   "homepage": "https://github.com/reconbot/acidburn.video#readme",
   "dependencies": {
-    "eslint": "^5.11.1",
     "ipfs": "^0.33.1",
-    "react": "^0.14.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
     "videostream": "^3.2.0"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.11.1",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/tape": "^4.2.33",
     "html-webpack-plugin": "^3.2.0",
+    "tape": "^4.9.2",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
