--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "acidburn.video2",
+  "name": "acidburn.video",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.12",
-    "@types/node": "10.12.18",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
-    "ipfs": "^0.34.4",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-file-drop": "^0.2.7",
-    "react-redux": "^6.0.0",
-    "react-scripts": "2.1.3",
-    "redux": "^4.0.1",
-    "redux-saga": "^0.16.2",
-    "typescript": "3.2.2",
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.4",
+    "@types/react": "16.8.13",
+    "@types/react-dom": "16.8.4",
+    "ipfs": "^0.35.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-file-drop": "^0.2.8",
+    "react-scripts": "^2.1.8",
+    "typescript": "^3.4.3",
     "videostream": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts --max_old_space_size=4096 build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
