Basic websocket example!

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:production": "cdk deploy '*production' --outputs-file ./cdk-outputs.json",
+    "deploy:staging": "cdk deploy '*staging' --outputs-file ./cdk-outputs.json"
   },
   "dependencies": {
     "@types/node": "20.4.9",
@@ -15,11 +17,15 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
